refactor: Simplify species categorization logic in DashboardService
- Replaced hardcoded species category strings with constants for better maintainability.
- Enhanced null handling for species to categorize empty or null values as "Otros".
- Updated stream collection methods to use the more concise toList() instead of collect(Collectors.toList()), improving code readability.